syntax = "proto3";
option go_package = "./;pb";

message Comment{
  int64  obj_id = 1;
  int64  user_id = 2;
  string user_name = 3;
  string user_avatar_url = 4;
  int64  root_id = 5;
  int64 root_comment_id = 6;
  int64 reply_id = 7;
  int64 reply_comment_id = 8;
  string content = 9;
  bool is_root = 10;
  int32  status = 11;
  int32 reply_count = 12;
  int32 like_count = 13;
  int32 child_count = 14;
  int64  stamp = 15;
}